[project]
name = "tau2-agent"
version = "0.1.0"
description = "A customer service agent for the tau2-bench evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "langgraph>=0.3.0",
    "litellm>=1.80.9",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
